--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "eslint": "^7.21.0",
         "husky": "^2.7.0",
         "mocha": "^8.3.2",
+        "typedoc": "^0.20.35",
         "typescript": "^4.2.3",
         "webpack": "^5.25.0",
         "webpack-cli": "^4.5.0",
