--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
         "lint": "tsc --project tsconfig.dts.json && eslint src/**/*.js",
         "lint:fix": "npm run lint -- --fix",
         "test": "mocha tests/index.test.js",
-        "build": "rm -rf dist && npm run lint && npm run test && webpack --mode production --config webpack.config.js && npm run build:docs",
+        "build": "npm run build:src && npm run build:docs",
+        "build:src": "npm run lint && npm run test && rm -rf dist && webpack --mode production --config webpack.config.js",
         "build:docs": "rm -rf docs && typedoc",
         "prepack": "npm install && npm run build"
     },
